--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,15 @@ body {
     height: 16px;
 }
 
+.subtitle {
+    margin: 2em 0;
+}
+
+.title {
+    font-size: 3em;
+    line-height: 1em;
+}
+
 /* LINKS & BUTTONS */
 
 .link {
@@ -96,6 +105,7 @@ body {
     padding: 1em;
     border-radius: 8px;
 }
+
 
 .course-button {
     display: flex;
@@ -144,3 +154,17 @@ body {
 .course-icon {
     margin-right: 10px;
 }
+
+/* MAIN-BANNER */
+
+.main-banner {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: 20px;
+    margin: 3em 0;
+    padding: 2em;
+    background: url(../assets/main-banner.png) bottom right no-repeat, #75BC7B;
+    background-size: 40%;
+}
+
