--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,11 @@
     -moz-box-sizing: border-box;    /* Firefox, other Gecko */
 }
 
+/* * {
+    background: #000 !important;
+    color: #0f0 !important;
+    outline: solid #f00 1px !important;
+} */
 
 ::-webkit-scrollbar {
       width: 0px;
@@ -45,6 +50,7 @@ body {
 .container {
     max-width: 1100px;
     margin: 0 auto;
+    padding: 0em 1em;
 }
 
 .icon {
@@ -64,6 +70,10 @@ body {
 .title-mid {
     font-size: 24px;
     font-weight: 600;
+}
+
+.title-icon {
+    font-size: 18px;
 }
 
 .left-title {
@@ -169,6 +179,11 @@ body {
     width: 50%;
 }
 
+.header-button__inner-mobile {
+    display: none;
+    margin: 2em;
+}
+
 .header-link {
     margin-right: 2em;
 }
@@ -218,7 +233,7 @@ body {
 
 #banner-bg1 {
     background: url(../assets/banner-image__book.png)  bottom right no-repeat #F3F3F3;
-    background-size: 60%;
+    background-size: 80%;
     margin: 1em 0;
 
 }
@@ -235,7 +250,6 @@ body {
     background-position: 70%;
     margin: 1em 0;
 }
-
 
 .half-banner {
     width: 40%;
@@ -257,8 +271,8 @@ body {
 /* COURSE-BANNER*/
 
 .course-banner {
-    background: url(../assets/course-image__web.png) center top no-repeat #8080FF;
-    background-size: 70%;
+    background: url(../assets/course-image__web.png) right center no-repeat #2D7DD2;
+    background-size: 30%;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -266,6 +280,7 @@ body {
     padding: 2em;
     margin-bottom: 3em;
     transition: .2s all;
+    min-height: 300px;
 }
 
 /* .web-banner:hover, .design-course:hover, .course-3D:hover, .tadjwid:hover   {
@@ -283,7 +298,7 @@ body {
 }
 
 .course-subtitle {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 700;
     text-transform: uppercase
 }
@@ -293,54 +308,55 @@ body {
 }
 
 .course-text {
-    margin-left: 3em;
+    margin-right: 3em;
 }
 
 .course-top {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 8em;
     max-width: 60%;
 }
 
 .capsule-button {
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.233), rgba(255, 255, 255, 0.205));
     backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.233);
     color: #000000;
     font-weight: 500;
+    font-size: 14px;
     border-radius: 100px;
-    padding: 0.8em;
+    padding: 0.45em 0.85em;
     margin-right: 8px;
     margin-bottom: 8px;
 }
 
-.capsule-black {
-    background: none;
-    background-color: #000000;
-    color: #ffffff;
-    border: none;
-}
+
 
 /* COURSE-BANNER (DESIGN) */
 
 .design-course {
-    background: url(../assets/course-image__design.png) right top no-repeat #C780FF;
-    background-size: 60%;
+    background: url(../assets/course-image__design.png) right center no-repeat #DC6ACF;
+    background-size: 30%;
 }
 
 /* COURSE-BANNER (3D) */
 
 .course-3D {
-    background: url(../assets/course-image__3D.png) right top no-repeat #e9be97;
-    background-size: 60%;
+    background: url(../assets/course-image__3D.png) right center no-repeat #ff6e39;
+    background-size: 30%;
 }
 
 /* COURSE-BANNER (Tadjwid) */
 
 .tadjwid {
-    background: url(../assets/course-image__tadjwid.png) center top no-repeat #75BC7B;
-    background-size: 50%;
+    background: url(../assets/course-image__tadjwid.png) right center no-repeat #75BC7B;
+    background-size: 30%;
+}
+
+/* COURSE-BANNER (English) */
+
+.english {
+    background: url(../assets/course-image__english.png) center right no-repeat #DF2935;
+    background-size: 30%;
 }
 
 /* FOOTER */
@@ -447,5 +463,87 @@ body {
 
 
 @media (max-width: 1000px) {
+    .course-button {
+        margin: 5px;
+        font-size: 12px;
+    }
+
+    .title {
+        font-size: 2.5em;
+    }
+
+    .header {
+        flex-direction: column;
+        margin-bottom: 0;
+    }
+
+    .header__inner {
+        width: 100%;
+        margin: 1em 0;
+    }
+
+    .header-button__inner {
+        display: none;
+    }
     
+    .header-button__inner-mobile {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .header-link {
+        margin: 0em 1em;
+    }
+
+    .course-nav {
+        justify-content: center;
+    }
+
+    .footer {
+        flex-direction: column;
+    }
+
+    .footer-logo {
+        align-self: flex-start;
+    }
+
+    .footer-text__inner {
+        margin: 2em 0;
+    }
+
+    .sub-banner__inner {
+        flex-direction: column;
+    }
+
+    .sub-block{
+        margin-top: 2em;
+    }
+
+    .sub-block__inner {
+        margin: 1em 0;
+    }
+
+    .half-banner {
+        width: unset;
+    }
+    
+    .course-top {
+        max-width: unset;
+    }
+
+    .course-text__inner {
+        margin: 2em 0;
+    }
+
+    .course-bottom {
+        flex-direction: column;
+        margin-top: 5em;
+        align-items: flex-start;
+    }
+
+    .web-banner, .design-course, .course-3D, .tadjwid, .english {
+        background-size: 40%;
+        background-position: bottom right;
+    }
 }
