temp lennis disable

--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ a {
 
 /* LENNIS */
 
-html.lenis, html.lenis body {
+/* html.lenis, html.lenis body {
     height: auto;
   }
   
@@ -54,7 +54,7 @@ html.lenis, html.lenis body {
 
 .lenis.lenis-smooth iframe {
   pointer-events: none;
-}
+} */
 
 /* GENERAL */
 
